--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
           </div> <!-- end of text-container -->
         </div> <!-- end of col -->
         <div class="col-lg-6">
-          <img class="img-fluid header_img" src="images/header-smartphones.png" alt="alternative">
+          <img class="img-fluid header_img" src="images/header.png" alt="alternative">
         </div> <!-- end of col -->
       </div> <!-- end of row -->
     </div> <!-- end of container -->
@@ -107,11 +107,11 @@
         <ul class="nav nav-tabs" id="templateTabs" role="tablist">
           <li class="nav-item">
             <a class="nav-link active" id="nav-tab-1" data-toggle="tab" href="#tab-1" role="tab" aria-controls="tab-1"
-              aria-selected="true"><i class="fas fa-cog"></i>Friend feed</a>
+              aria-selected="true"><i class="fas fa-cog"></i>Friend life</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" id="nav-tab-2" data-toggle="tab" href="#tab-2" role="tab" aria-controls="tab-2"
-              aria-selected="false"><i class="fas fa-binoculars"></i>Shoot</a>
+              aria-selected="false"><i class="fas fa-binoculars"></i>Add your story/post</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" id="nav-tab-3" data-toggle="tab" href="#tab-3" role="tab" aria-controls="tab-3"
@@ -154,6 +154,16 @@
                         </p>
                       </div>
                     </li>
+                    <li class="media">
+                        <span class="fa-stack">
+                            <i class="fas fa-circle fa-stack-2x"></i>
+                            <i class="far fa-gem fa-stack-1x"></i>
+                        </span>
+                        <div class="media-body">
+                            <h4>50 likes！</h4>
+                            <p>If you like someone's stories, you can give him/her 50 likes!</p>
+                        </div>
+                    </li>
                   </ul>
                 </div> <!-- end of col -->
                 <!-- end of icon cards pane -->
@@ -187,6 +197,16 @@
                         <p>you can choose which friend you like to check.</p>
                       </div>
                     </li>
+                    <li class="media">
+                        <span class="fa-stack">
+                            <i class="fas fa-circle fa-stack-2x"></i>
+                            <i class="fas fa-cube fa-stack-1x"></i>
+                        </span>
+                        <div class="media-body">
+                            <h4>Comment bubble!</h4>
+                            <p>All comments can be showed like scrolling bubbles.</p>
+                        </div>
+                    </li>
                   </ul>
                 </div> <!-- end of col -->
                 <!-- end of icon cards pane -->
@@ -203,7 +223,7 @@
 
                 <!-- Image Pane -->
                 <div class="col-lg-4">
-                  <img class="img-fluid border-pic" src="images/highlight_features_2.png" alt="alternative">
+                  <img class="img-fluid border-pic" src="images/highlight_features_9.png" alt="alternative">
                 </div> <!-- end of col -->
                 <!-- end of image pane -->
 
@@ -220,6 +240,26 @@
                         <p>You can shoot 15 seconds video anytime.</p>
                       </div>
                     </li>
+                    <li class="media">
+                        <span class="fa-stack">
+                            <i class="fas fa-circle fa-stack-2x"></i>
+                            <i class="fas fa-book fa-stack-1x"></i>
+                        </span>
+                        <div class="media-body">
+                            <h4>One Step for take picture or shoot videos</h4>
+                            <p>You only need one button for different uses. Single Click to take photos, and long press to shoot videos</p>
+                        </div>
+                    </li>
+                    <li class="media">
+                        <span class="fa-stack">
+                            <i class="fas fa-circle fa-stack-2x"></i>
+                            <i class="far fa-compass fa-stack-1x"></i>
+                        </span>
+                        <div class="media-body">
+                            <h4>Save your creations</h4>
+                            <p>After you finish editing your photo/videos，you can downloads your creations before sharing</p>
+                        </div>
+                    </li>
                   </ul>
                   <ul class="list-unstyled li-space-lg">
                     <li class="media">
@@ -231,6 +271,26 @@
                         <h4>choose from album</h4>
                         <p>You can choose pictures or videos from album.</p>
                       </div>
+                    </li>
+                    <li class="media">
+                        <span class="fa-stack">
+                            <i class="fas fa-circle fa-stack-2x"></i>
+                            <i class="fas fa-code fa-stack-1x"></i>
+                        </span>
+                        <div class="media-body">
+                            <h4>Crop video as you like</h4>
+                            <p>If you choose a video longer than 15s, you can crop it shorter than 15s as you like</p>
+                        </div>
+                    </li>
+                    <li class="media">
+                        <span class="fa-stack">
+                            <i class="fas fa-circle fa-stack-2x"></i>
+                            <i class="far fa-gem fa-stack-1x"></i>
+                        </span>
+                        <div class="media-body">
+                            <h4>More features</h4>
+                            <p>We are developing more lens and features for </p>
+                        </div>
                     </li>
                   </ul>
                 </div> <!-- end of col -->
@@ -250,8 +310,34 @@
                 <div class="col-lg-8">
                   <ul class="list-unstyled li-space-lg first">
                     <li class="media">
-                      <div class="media-body">
-                      </div>
+                        <span class="fa-stack">
+                            <i class="fas fa-circle fa-stack-2x"></i>
+                            <i class="fas fa-cube fa-stack-1x"></i>
+                        </span>
+                        <div class="media-body">
+                            <h4>Record your big day</h4>
+                            <p>Post your big day to make your own timeline</p>
+                        </div>
+                    </li>
+                    <li class="media">
+                        <span class="fa-stack">
+                            <i class="fas fa-circle fa-stack-2x"></i>
+                            <i class="fas fa-book fa-stack-1x"></i>
+                        </span>
+                        <div class="media-body">
+                            <h4>Delete your dislike post/story</h4>
+                            <p>You can delete your post/story or comment to other posts anytime</p>
+                        </div>
+                    </li>
+                    <li class="media">
+                        <span class="fa-stack">
+                            <i class="fas fa-circle fa-stack-2x"></i>
+                            <i class="far fa-compass fa-stack-1x"></i>
+                        </span>
+                        <div class="media-body">
+                            <h4>See your contact</h4>
+                            <p>You can see your contact and invite friends anytime.</p>
+                        </div>
                     </li>
                   </ul>
                   <ul class="list-unstyled li-space-lg">
@@ -261,10 +347,30 @@
                         <i class="fas fa-calendar-alt fa-stack-1x"></i>
                       </span>
                       <div class="media-body">
-                        <h4>Memory</h4>
-                        <p>your 24 hours' stories can be stored in Memory.
-                          you can easily find them and repost them to new stories or posts.</p>
+                        <h4>Memory archive</h4>
+                        <p>Your 24 hours' stories can be stored in Memory.
+                          you can easily find them.</p>
                       </div>
+                    </li>
+                    <li class="media">
+                        <span class="fa-stack">
+                            <i class="fas fa-circle fa-stack-2x"></i>
+                            <i class="fas fa-code fa-stack-1x"></i>
+                        </span>
+                        <div class="media-body">
+                            <h4>Memory repost</h4>
+                            <p>All memories can be reposted to new stories or posts.</p>
+                        </div>
+                    </li>
+                    <li class="media">
+                        <span class="fa-stack">
+                            <i class="fas fa-circle fa-stack-2x"></i>
+                            <i class="far fa-gem fa-stack-1x"></i>
+                        </span>
+                        <div class="media-body">
+                            <h4>To see who view you</h4>
+                            <p>In your own story page, you can check who view your story.</p>
+                        </div>
                     </li>
                   </ul>
                 </div> <!-- end of col -->
@@ -317,7 +423,7 @@
                 <!-- Slide -->
                 <div class="swiper-slide">
                   <a href="images/highlight_features_2.png" class="popup-link" data-effect="fadeIn">
-                    <img class="img-fluid border-pic" src="images/highlight_features_2.png" alt="alternative">
+                    <img class="img-fluid border-pic" src="images/highlight_features_9.png" alt="alternative">
                   </a>
                 </div>
                 <!-- end of slide -->
@@ -342,14 +448,6 @@
                 <div class="swiper-slide">
                   <a href="images/highlight_features_5.png" class="popup-link" data-effect="fadeIn">
                     <img class="img-fluid border-pic" src="images/highlight_features_5.png" alt="alternative">
-                  </a>
-                </div>
-                <!-- end of slide -->
-
-                <!-- Slide -->
-                <div class="swiper-slide">
-                  <a href="images/highlight_features_6.png" class="popup-link" data-effect="fadeIn">
-                    <img class="img-fluid border-pic" src="images/highlight_features_6.png" alt="alternative">
                   </a>
                 </div>
                 <!-- end of slide -->
@@ -401,7 +499,7 @@
         </div> <!-- end of col -->
         <div class="col-lg-6">
           <div class="image-container">
-            <img class="img-fluid" src="images/download.png" alt="alternative">
+            <img class="img-fluid" src="images/fotter.png" alt="alternative">
           </div> <!-- end of image-container -->
         </div> <!-- end of col -->
       </div> <!-- end of row -->
@@ -416,46 +514,14 @@
       <div class="row">
         <div class="col-lg-12">
           <div class="footer-col first">
-            <h6>About Leno</h6>
-            <p class="p-small">Leno is a mobile app HTML Bootstrap landing page template built to help you create great
-              basic websites for apps and grow the user base.</p>
+            <h6>About Highlight</h6>
+            <p class="p-small">Highlight is a social app that helps users show themselves more authentically in their personal circles</p>
           </div> <!-- end of footer-col -->
           <div class="footer-col second">
-            <h6>Links</h6>
-            <ul class="list-unstyled li-space-lg p-small">
-              <li>Important: <a href="terms.html">Terms & Conditions</a>, <a href="privacy.html">Privacy Policy</a></li>
-              <li>Useful: <a href="#">Colorpicker</a>, <a href="#">Icon Library</a>, <a href="#">Illustrations</a></li>
-              <li>Menu: <a href="article.html">Article</a>, <a href="features.html">Features</a>, <a
-                  href="pricing.html">Pricing</a>, <a href="contact.html">Contact</a></li>
-            </ul>
           </div> <!-- end of footer-col -->
           <div class="footer-col third">
-            <span class="fa-stack">
-              <a href="#your-link">
-                <i class="fas fa-circle fa-stack-2x"></i>
-                <i class="fab fa-facebook-f fa-stack-1x"></i>
-              </a>
-            </span>
-            <span class="fa-stack">
-              <a href="#your-link">
-                <i class="fas fa-circle fa-stack-2x"></i>
-                <i class="fab fa-twitter fa-stack-1x"></i>
-              </a>
-            </span>
-            <span class="fa-stack">
-              <a href="#your-link">
-                <i class="fas fa-circle fa-stack-2x"></i>
-                <i class="fab fa-pinterest-p fa-stack-1x"></i>
-              </a>
-            </span>
-            <span class="fa-stack">
-              <a href="#your-link">
-                <i class="fas fa-circle fa-stack-2x"></i>
-                <i class="fab fa-instagram fa-stack-1x"></i>
-              </a>
-            </span>
             <p class="p-small">We would love to hear from you <a
-                href="mailto:contact@leno.com"><strong>contact@leno.com</strong></a></p>
+                href="mailto:support@highlight.mobi"><strong>support@highlight.mobi</strong></a></p>
           </div> <!-- end of footer-col -->
         </div> <!-- end of col -->
       </div> <!-- end of row -->
@@ -469,7 +535,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12">
-          <p class="p-small">Copyright © <a href="https://inovatik.com">Template by Inovatik</a></p>
+          <p class="p-small">Copyright © Highlight</p>
         </div> <!-- end of col -->
       </div> <!-- enf of row -->
     </div> <!-- end of container -->
