--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                       </span>
                       <div class="media-body">
                         <h4>Post</h4>
-                        <p>record your important moment in your life and make your own profile</p>
+                        <p>Record your important moment in your life and make your own profile</p>
                       </div>
                     </li>
                     <li class="media">
@@ -194,7 +194,7 @@
                       </span>
                       <div class="media-body">
                         <h4>Easily Reading</h4>
-                        <p>you can choose which friend you like to check.</p>
+                        <p>You can choose which friend you like to check.</p>
                       </div>
                     </li>
                     <li class="media">
